<resources>
    <string name="app_name">Lembretes</string>
    <string name="tarefas">Tarefas</string>
    <string name="t_tulo">Título</string>
    <string name="data">Data</string>
    <string name="hora">Hora</string>
    <string name="criar_tarefa">Criar Tarefa</string>
    <string name="cancelar">Cancelar</string>
    <string name="nova_tarefa_description">Nova Tarefa</string>
    <string name="passear_com_o_cachorro">Passear com o cachorro</string>
    <string name="label_edit">Editar</string>
    <string name="label_delete">Deletar</string>
    <string name="label_you_dont_have_tasks">Nenhuma tarefa</string>
    <string name="lembretes">Lembretes</string>
    <string name="zero">0</string>
</resources>